--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "OTIyMzIzOTU1NjQ0MjUyMjUw.Yb_zHg.32cImcq28P8mrWbqeDb9fbyWMSM",
+    "token": "OTIyMzIzOTU1NjQ0MjUyMjUw.Yb_zHg.VIwX7Mefj5qsXSqK0O",
     "clientId": "922323955644252250",
     "guildId": ["836391563290607658", "454164511188844554"],
     "api_token": "mongodb://localhost:27017"
